fixed backgrond on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3877,7 +3877,7 @@ input, select, textarea {
 		background-image: url("images/intro.svg");
 		background-position: top right;
 		background-repeat: no-repeat;
-		background-size: 100% auto;
+		background-size: 100% 100%;
 	}
 
 		#intro p {
@@ -3903,7 +3903,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			#intro {
-				background-attachment: scroll;
+				background-attachment: fixed;
 			}
 
 		}
